Filtering hands off playlist id values

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/sticky_footer.css')}}">
 
     <!-- Google fonts and icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
   </head>
@@ -27,7 +27,7 @@
 
         <div class="container-fluid">
 
-          <a href='{{ url_for("index") }}'>
+          <a href='{{ url_for("profile") }}'>
             <div class="navbar-header">
               <p class="navbar-brand" id="title" href="#">Sprintify</p>
               <img src="{{url_for('static', filename='imgs/sprintify.png')}}" id="icon">
