--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,12 +18,12 @@
 
   </head>
 
-  <body>
+  <body style = "background-color: black;">
 
     <div id="header">
 
       <!-- Static navbar -->
-      <nav class="navbar navbar-default">
+      <nav style = "border: 0; background-color:#333333" class="navbar navbar-default">
 
         <div class="container-fluid">
 
@@ -45,19 +45,6 @@
                       </div>
                       <div class='row'>
                         <span id='hidden'>Profile</span>
-                      </div>
-                      </a>
-                  </div>
-              </li>
-
-              <li>
-                  <div class='icon-container container'>
-                    <a href="{{ url_for('search') }}">
-                      <div class='row'>
-                        <i class="material-icons">search</i>
-                      </div>
-                      <div class='row'>
-                        <span id='hidden'>Search</span>
                       </div>
                       </a>
                   </div>
