Altered Spotify.py
Default returns 50 playlists instead of 20

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,9 +6,9 @@
 
   <div class="container">
     <div class="mt-1">
-      <h1>Profile</h1>
+      <h1 style="color:white;" >Profile</h1>
     </div>
-    <p class="lead">You need to log in to see this page</p>
+    <p style="color:white;" class="lead">You need to log in to see this page</p>
 
     <a type="button" class="btn btn-default" href="/auth">Login</a>
   </div>
