added int input
please accept :)

--- a/templates/filter.html
+++ b/templates/filter.html
@@ -27,6 +27,17 @@
         {% endif %}
 
       </div>
+
+      <div class="col-sm-8">       
+        <p>Enter your BPM range</p>
+        <form action ="Script_URL" mehtod = "GET|POST">
+          Max:  <input type= "number" name="max" min="99" max="300"></input>
+          <!--enter custom error message?-->
+          <br> </br>
+          Min: <input type= "number" name="min" min="100" max="300"></input>
+        </form>
+      </div>
+
     </div>
 	</div>
 
